--- a/src/Components/componentcss/Dashboard.css
+++ b/src/Components/componentcss/Dashboard.css
@@ -122,5 +122,21 @@
    
     stroke: white;
 }
+@media screen and (max-width: 1444px) {
+  
+    .dashboard-left{
+        background-color:black;
+        height:100%;
+        justify-content: space-between;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        width:15vw;
+        font-family: 'Roboto', sans-serif;   
+    }
+  
+    
+  }
+
 
 
